sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: '<-' expected but ')' found.
    for (i+ecart<getNombreValeurs()-1){
                                     ^AlgCombSort:11: error: illegal start of simple expression
  }
  ^AlgCombSort:12: error: 'while' expected but '}' found.
} 
^