sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart : Int = getNombreValeurs()-1
  do{
    if (ecart>1){
      ecart=(ecart.toDouble/1.3).toInt
    }
    for (i+ecart<getNombreValeurs()-1){
      
    }
  }
}